RESOLVED FIXED313768
REGRESSION(312300@main): [macOS] TestWebKitAPI.UnifiedPDF.EmbeddedPDFScrollbarDoesNotAdaptToDarkMode is flaky failure
https://bugs.webkit.org/show_bug.cgi?id=313768
Summary REGRESSION(312300@main): [macOS] TestWebKitAPI.UnifiedPDF.EmbeddedPDFScrollba...
Marta Darbinyan
Reported 2026-04-30 11:56:46 PDT
The following test is flaky failure on macOS after 312300@main. TestWebKitAPI.UnifiedPDF.EmbeddedPDFScrollbarDoesNotAdaptToDarkMode 09:55:13.468 1029 TestWebKitAPI.UnifiedPDF.EmbeddedPDFScrollbarDoesNotAdaptToDarkMode 09:55:13.468 1029 CoreGraphics PDF has logged an error. Set environment variable "CG_PDF_VERBOSE" to learn more. 09:55:13.468 1029 09:55:13.468 1029 /Volumes/Data/worker/macOS-Tahoe-Debug-Build-EWS/build/Tools/TestWebKitAPI/Tests/WebKit/WKWebView/UnifiedPDFTests.mm:1523 09:55:13.468 1029 Value of: [pluginNode containsString:@"uses dark appearance for scrollbars"] 09:55:13.468 1029 Actual: true 09:55:13.468 1029 Expected: false Test link: https://ews-build.webkit.org/#/builders/165/builds/23462 History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.UnifiedPDF.EmbeddedPDFScrollbarDoesNotAdaptToDarkMode
Attachments
[fast-cq]Patch (5.25 KB, patch)
2026-04-30 14:12 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2026-04-30 11:57:05 PDT
EWS
Comment 2 2026-04-30 12:17:08 PDT
Test gardening commit 312382@main (c50465b64fde): <https://commits.webkit.org/312382@main> Reviewed commits have been landed. Closing PR #63989 and removing active labels.
alan
Comment 3 2026-04-30 14:12:45 PDT
Created attachment 479402 [details] [fast-cq]Patch
Abrar Rahman Protyasha
Comment 4 2026-04-30 14:20:16 PDT
Comment on attachment 479402 [details] [fast-cq]Patch Yup, I'd considered making the full frame vs embedded plugin behavior more obvious, but thank you for discovering it regardless.
alan
Comment 5 2026-04-30 14:21:45 PDT
Thank you for reviewing it!
EWS
Comment 6 2026-04-30 19:45:43 PDT
Committed 312409@main (8f6ed05e251a): <https://commits.webkit.org/312409@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479402 [details].
Alexey Proskuryakov
Comment 7 2026-05-02 12:16:05 PDT
What was making this failure flaky? Is there some state leaking between tests?
alan
Comment 8 2026-05-02 12:32:53 PDT
I didn't look as it was 100% repro locally (e.g. iteration=20 came back with 20 failures, single run always failed).
Alexey Proskuryakov
Comment 9 2026-05-02 13:24:28 PDT
The history is flaky on all queues.
Note You need to log in before you can comment on or make changes to this bug.